fix overflowing collection header

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -38,3 +38,7 @@ hr {
 .pointer {
   cursor: pointer;
 }
+
+.bs-bb {
+  box-sizing: border-box;
+}
