--- a/app/assets/stylesheets/bass/_grid.scss
+++ b/app/assets/stylesheets/bass/_grid.scss
@@ -63,15 +63,15 @@
 }
 
 @media #{$breakpoint-sm} {
-  .sm-col {
-    float: left;
-    box-sizing: border-box;
-  }
-
-  .sm-col-right {
-    float: right;
-    box-sizing: border-box;
-  }
+  // .sm-col {
+  //   float: left;
+  //   box-sizing: border-box;
+  // }
+  // 
+  // .sm-col-right {
+  //   float: right;
+  //   box-sizing: border-box;
+  // }
 
   .sm-col-1 {
     width: (1/12 * 100%);
