--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -29,7 +29,3 @@
 .shadow {
   box-shadow: 0 1px 2px rgba(100,100,100,.2);
 }
-
-.bs-bb {
-  box-sizing: border-box;
-}
